--- a/myProyectoPaginaWeb/miPaginaweb/static/css/template.css
+++ b/myProyectoPaginaWeb/miPaginaweb/static/css/template.css
@@ -1,169 +1,165 @@
 /* Estilos Generales */
 
-*{
-    margin:0px;
-    padding:0px;
+* {
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
-    list-style:none;
- }
+    list-style: none;
+}
 
- /* Estilo para dispositivos grandes */
- @media screen and (min-width:1024px) and (max-width:2000px){
+
+/* Estilo para dispositivos grandes */
+
+@media screen and (min-width:1024px) and (max-width:2000px) {
     /* navegador */
-
     #navbarPage {
-                
-        background:#1b5583;
-        top: 0;  
+        background: #1b5583;
+        top: 0;
     }
     #navbarNavAltMarkup {
         align-content: flex-end;
         align-self: flex-end;
     }
-    
-    
-    #btnMenu{
+    #btnMenu {
         display: none;
     }
-    
-    header label{
-        display: none;   
-        
+    header label {
+        display: none;
         width: 80px;
         height: 20px;
-    
     }
-    header label:hover{
+    header label:hover {
         cursor: pointer;
     }
-    
     .menu ul {
         margin-right: 40px;
-       float: right;
-       margin-top:-20px; 
-        display:flex;
+        float: right;
+        margin-top: -20px;
+        display: flex;
     }
     .menu li a {
-        font-size:14px;
+        font-size: 14px;
         color: white;
         padding: 10px 20px;
         text-decoration: none;
         font-family: "Poppins";
-    
     }
-    
-    .menu li:hover{
+    .menu li:hover {
         text-decoration: underline;
     }
- }
-
-/* Estilo para dispositivos medianos (Tablets) */
-@media screen and (min-width:420px) and (max-width:1024px){
-    /* navegador */
-    #btnMenu{
-        display: none;
-    }
-    
-    header label{
-        
-        position: fixed;
-        top: 0;
-        width: 100%;
-        height: 3em;
-        padding:20px;
-        padding-left: 50%;
-        display: block;
-        background:#1b5583;
-        
-    }
-    .menu{
-        
-       position:fixed;
-       left:12%;
-       top: 1.7%;
-       width: 80%;
-      margin-top: -100%;
-      transition: 0.5s ease-in-out;
-      
-    }
-
-    .menu ul{      
-        list-style-type: none;
-        background:#1b5f83;   
-    }
-
-    .menu ul{
-        border-top: solid 1px rgb(10, 9, 9);
-    }
-
-    .menu li a{
-        
-        display:block;
+    .footer {
+        height: 99px;
+        background-color: rgb(100, 91, 91);
+        color: rgba(0, 0, 0, 0.555);
         text-align: center;
-        padding: 8px;
-        color: aliceblue;
-        text-decoration: none;
-        list-style: none;
-        
-    }
-    
-    #btnMenu:checked ~.menu{
-        margin:0;
-
+        padding: 40px;
     }
 }
 
-/* Estilo para dispositivos pequeños (Celulares) */
-@media screen and (max-width:420px) {
-    /* NAVEGADOR */
-    
-    #btnMenu{
+
+/* Estilo para dispositivos medianos (Tablets) */
+
+@media screen and (min-width:420px) and (max-width:1024px) {
+    /* navegador */
+    #btnMenu {
         display: none;
     }
-  
-    header label{
-        
+    header label {
         position: fixed;
         top: 0;
         width: 100%;
         height: 3em;
-        padding:20px;
+        padding: 20px;
         padding-left: 50%;
         display: block;
-        background:#1b5583;
-        
+        background: #1b5583;
     }
-    .menu{
-        
-       position:fixed;
-       left:12%;
-       background: rgb(255, 255, 255);
-       top: 7.3%;
-       width: 80%;
-      margin-top: -70%;
-      transition: 0.5s ease-in-out;
-      
+    .menu {
+        position: fixed;
+        left: 12%;
+        top: 1.7%;
+        width: 80%;
+        margin-top: -100%;
+        transition: 0.5s ease-in-out;
     }
-    .menu ul{
+    .menu ul {
         list-style-type: none;
-            background:#1b5f83;
-    
+        background: #1b5f83;
     }
-    .menu ul{
+    .menu ul {
         border-top: solid 1px rgb(10, 9, 9);
     }
-    .menu li a{
-        font-family: 'Poppins';
-        display:block;
+    .menu li a {
+        display: block;
         text-align: center;
         padding: 8px;
         color: aliceblue;
         text-decoration: none;
         list-style: none;
-        
     }
-    
-    #btnMenu:checked ~.menu{
-        margin:0;
+    #btnMenu:checked~.menu {
+        margin: 0;
+    }
+    .footer {
+        height: 99px;
+        background-color: rgb(100, 91, 91);
+        color: rgba(0, 0, 0, 0.555);
+        text-align: center;
+        padding: 40px;
+    }
+}
 
+
+/* Estilo para dispositivos pequeños (Celulares) */
+
+@media screen and (max-width:420px) {
+    /* NAVEGADOR */
+    #btnMenu {
+        display: none;
     }
+    header label {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 3em;
+        padding: 20px;
+        padding-left: 50%;
+        display: block;
+        background: #1b5583;
+    }
+    .menu {
+        position: fixed;
+        left: 12%;
+        background: rgb(255, 255, 255);
+        top: 7.3%;
+        width: 80%;
+        margin-top: -70%;
+        transition: 0.5s ease-in-out;
+    }
+    .menu ul {
+        list-style-type: none;
+        background: #1b5f83;
+    }
+    .menu ul {
+        border-top: solid 1px rgb(10, 9, 9);
+    }
+    .menu li a {
+        font-family: 'Poppins';
+        display: block;
+        text-align: center;
+        padding: 8px;
+        color: aliceblue;
+        text-decoration: none;
+        list-style: none;
+    }
+    #btnMenu:checked~.menu {
+        margin: 0;
+    }
+    .footer {
+        height: 99px;
+        background-color: rgb(100, 91, 91);
+        color: rgba(0, 0, 0, 0.555);
+        text-align: center;
+        padding: 40px;
+    }
+}
